= Devolutions-Jet changelog

This document provides a list of notable changes introduced in Devolutions-Jet by release.

== 0.11.0 (unreleased)
  * Fix websocket connection. Enable HTTP upgrade for the hyper connection.
  * Add jet instance name in health response.

== 0.10.9 (2020-05-13)
  * Fix websocket listener. An error was returned by the tls acceptor. Ignore those errors.

== 0.10.8 (2020-05-12)
  * Don't panic if listeners future returns an error. Just print the error and close the application

== 0.10.7 (2020-05-12)
  * Exactly same as 0.10.6 (just to be able to deploy again with Devops' tool).

== 0.10.6 (2020-05-12)
  * Exactly same as 0.10.5 (just to be able to deploy again with Devops' tool).

== 0.10.5 (2020-05-11)
  * Exactly same as 0.10.4 (just to be able to deploy again with Devops' tool).

== 0.10.4 (2020-05-11)
  * Add module name in logs.
  * Add curl to Docker container.

== 0.10.3 (2020-05-08)
  * Exactly same as 0.10.2 (just to be able to deploy again with Devops' tool).

== 0.10.2 (2020-05-05)
  * Remove color from logs

== 0.10.1 (2020-03-26)

  * Exactly same as 0.10.0 (workaround to deploy a new version in prod without issue with ACI)

== 0.10.0 (2020-03-23)

  * Add provisioner public key
  * DVC with GFX integration
  * Fixes an issue where some associations were not removed (ghost associations).

